src/test/deca/context/valid/ContextSansObjet/OperationsBooleennes/FloatGtInt.deca
//Description
// test de comparaison entre en int et un float
//
//Réponse
// ok
{
    1.0 > 1;
}