src/test/deca/context/invalid/ContextSansObjet/OperationsBooleennes/EqFloatNull.deca
//Description
//  Test d'égalité entre un float et un null
//
//Réponse
//  Erreur contextuelle ligne 9
//  types incompatibles pour faire la comparaison
{
    float x;
    x == null;
}